Fixed spacing

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -430,7 +430,7 @@ hr.footer-border{
 }
 
 .tallblock{
-  height: 630px;
+  height: 650px;
   padding: 0 20px;
 }
 
